# src/main/java/com/pragma/powerup/application/handler/IRestaurantHandler.java
@@ -1,0 +1,8 @@
+package com.pragma.powerup.application.handler;
+
+import com.pragma.powerup.application.dto.request.RestaurantRequestDto;
+import com.pragma.powerup.application.dto.response.RestaurantResponseDto;
+
+public interface IRestaurantHandler {
+    RestaurantResponseDto createRestaurant(RestaurantRequestDto request);
+}
