# src/main/java/com/pragma/powerup/domain/api/IRestaurantServicePort.java
@@ -1,0 +1,7 @@
+package com.pragma.powerup.domain.api;
+
+import com.pragma.powerup.domain.model.Restaurant;
+
+public interface IRestaurantServicePort {
+    Restaurant createRestaurant(Restaurant restaurant);
+}
