# src/main/java/com/pragma/powerup/domain/model/Restaurant.java
@@ -1,0 +1,18 @@
+package com.pragma.powerup.domain.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class Restaurant {
+    private Long id;
+    private String name;
+    private String nit;
+    private String address;
+    private String phone;
+    private String urlLogo;
+    private Long ownerId;
+}
